Commit from Dualite Alpha:

--- a/index.html
+++ b/index.html
@@ -126,13 +126,7 @@
         <div class="logo-container">
             <div class="logo-3d" id="logo3d">
                 <div class="crescent left-crescent"></div>
-                <div class="logo-text" id="logoText">
-                    <span class="letter">L</span>
-                    <span class="letter">U</span>
-                    <span class="letter">N</span>
-                    <span class="letter">A</span>
-                    <span class="letter">I</span>
-                </div>
+                <div class="logo-text" id="logoText">LUNAI</div>
                 <div class="crescent right-crescent"></div>
             </div>
             <div class="logo-backdrop" id="logoBackdrop"></div>
@@ -402,24 +396,26 @@
                 <h2 class="section-title">About Lunai</h2>
                 <p class="section-subtitle">A cosmic journey into the future of innovation, elegance, and digital serenity.</p>
             </div>
-            <div class="feature-grid">
-                <div class="feature-card" data-aos="float-up" data-delay="0" data-narrate="cosmic">
-                    <div class="feature-icon">🌌</div>
-                    <h3>Cosmic Innovation</h3>
-                    <p>Pioneering the boundaries of digital experiences with cutting-edge technology</p>
-                    <div class="card-glow"></div>
-                </div>
-                <div class="feature-card" data-aos="float-up" data-delay="200" data-narrate="elegant">
-                    <div class="feature-icon">✨</div>
-                    <h3>Elegant Design</h3>
-                    <p>Where minimalism meets the infinite cosmos in perfect harmony</p>
-                    <div class="card-glow"></div>
-                </div>
-                <div class="feature-card" data-aos="float-up" data-delay="400" data-narrate="future">
-                    <div class="feature-icon">🚀</div>
-                    <h3>Future Vision</h3>
-                    <p>Transforming tomorrow through lunar inspiration and stellar innovation</p>
-                    <div class="card-glow"></div>
+            <div class="marquee">
+                <div class="feature-grid marquee-track">
+                    <div class="feature-card" data-narrate="cosmic">
+                        <div class="feature-icon">🌌</div>
+                        <h3>Cosmic Innovation</h3>
+                        <p>Pioneering the boundaries of digital experiences with cutting-edge technology</p>
+                        <div class="card-glow"></div>
+                    </div>
+                    <div class="feature-card" data-narrate="elegant">
+                        <div class="feature-icon">✨</div>
+                        <h3>Elegant Design</h3>
+                        <p>Where minimalism meets the infinite cosmos in perfect harmony</p>
+                        <div class="card-glow"></div>
+                    </div>
+                    <div class="feature-card" data-narrate="future">
+                        <div class="feature-icon">🚀</div>
+                        <h3>Future Vision</h3>
+                        <p>Transforming tomorrow through lunar inspiration and stellar innovation</p>
+                        <div class="card-glow"></div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -448,26 +444,28 @@
     <section class="vision-section" id="vision">
         <div class="container">
             <h2 class="section-title">Cosmic Testimonials</h2>
-            <div class="testimonials-constellation">
-                <div class="testimonial-star" data-aos="constellation" data-delay="0">
-                    <div class="star-glow"></div>
-                    <div class="testimonial-content">
-                        <p>"Lunai's strategic branding services are unparalleled. They captured our essence and delivered a visual and verbal identity that has truly set us apart. Their process is as innovative as their final product."</p>
-                        <cite>Dr. Priya Krishnamurthy</cite>
+            <div class="marquee">
+                <div class="testimonials-constellation marquee-track">
+                    <div class="testimonial-star">
+                        <div class="star-glow"></div>
+                        <div class="testimonial-content">
+                            <p>"Lunai's strategic branding services are unparalleled. They captured our essence and delivered a visual and verbal identity that has truly set us apart. Their process is as innovative as their final product."</p>
+                            <cite>Dr. Priya Krishnamurthy</cite>
+                        </div>
                     </div>
-                </div>
-                <div class="testimonial-star" data-aos="constellation" data-delay="300">
-                    <div class="star-glow"></div>
-                    <div class="testimonial-content">
-                        <p>"The digital web and content excellence from Lunai is phenomenal. They built a cosmic web experience for us, backed by creative content that engages and converts. A truly transformative partnership."</p>
-                        <cite>Rajesh Nair</cite>
+                    <div class="testimonial-star">
+                        <div class="star-glow"></div>
+                        <div class="testimonial-content">
+                            <p>"The digital web and content excellence from Lunai is phenomenal. They built a cosmic web experience for us, backed by creative content that engages and converts. A truly transformative partnership."</p>
+                            <cite>Rajesh Nair</cite>
+                        </div>
                     </div>
-                </div>
-                <div class="testimonial-star" data-aos="constellation" data-delay="600">
-                    <div class="star-glow"></div>
-                    <div class="testimonial-content">
-                        <p>"For our campaign, Lunai's strategic research and intelligence were game-changing. They provided deep cosmic insights that shaped a winning strategy, proving their excellence in the political campaign arena."</p>
-                        <cite>Kavitha Reddy</cite>
+                    <div class="testimonial-star">
+                        <div class="star-glow"></div>
+                        <div class="testimonial-content">
+                            <p>"For our campaign, Lunai's strategic research and intelligence were game-changing. They provided deep cosmic insights that shaped a winning strategy, proving their excellence in the political campaign arena."</p>
+                            <cite>Kavitha Reddy</cite>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -549,15 +547,36 @@
     <footer class="site-footer">
         <div class="container">
             <div class="footer-content">
-                <a href="#top" class="footer-logo">LUNAI</a>
-                <p class="footer-tagline">Digital Excellence | Eclipse of Tomorrow</p>
-                <p class="footer-copyright">
-                    © 2025 Lunai. All rights reserved. <br class="mobile-break"> Built with cosmic precision and infinite innovation.
-                </p>
+                <!-- Column 1: Address -->
+                <div class="footer-column footer-column-left">
+                    <div class="footer-address">
+                        <i data-lucide="map-pin"></i>
+                        <div>
+                            A brand of Ra Origins Pvt. Ltd.<br>
+                            4/68E, 2nd Cross Brindavan road,<br>
+                            Salem, Tamil Nadu, India.
+                        </div>
+                    </div>
+                </div>
+                <!-- Column 2: Brand -->
+                <div class="footer-column footer-column-center">
+                    <a href="#top" class="footer-logo">LUNAI</a>
+                    <p class="footer-tagline">Digital Excellence | Eclipse of Tomorrow</p>
+                </div>
+                <!-- Column 3: Contact -->
+                <div class="footer-column footer-column-right">
+                    <div class="footer-phone">
+                        <i data-lucide="phone"></i>
+                        <a href="tel:+919345272445">+91 93452 72445</a>
+                    </div>
+                </div>
             </div>
+            <p class="footer-copyright">
+                © 2025 Lunai. All rights reserved. <br class="mobile-break"> Built with cosmic precision and infinite innovation.
+            </p>
         </div>
     </footer>
 
-    <script src="app.js"></script>
+    <script type="module" src="app.js"></script>
 </body>
 </html>
