Commit from Dualite Alpha:

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://lunai.com/">
+    <meta property="og:url" content="https://lunai1-mu96-alphaproject.netlify.app">
     <meta property="og:title" content="Lunai - AI Voice, Branding, Digital Strategy & Creative Services">
     <meta property="og:description" content="Lunai offers cosmic digital excellence across Strategic Branding, Research, Web Development, and Creative Content services.">
-    <meta property="og:image" content="https://lunai.com/og-image.png">
+    <meta property="og:image" content="https://d33wubrfki0l68.cloudfront.net/68c7ff9a6f8677c3f75ab78c/screenshot_2025-09-15-12-00-20-0000.webp">
     <meta property="og:site_name" content="Lunai">
 
     <!-- Twitter -->
@@ -29,7 +29,7 @@
     <meta property="twitter:image" content="https://lunai.com/twitter-image.png">
 
     <!-- Additional SEO -->
-    <link rel="canonical" href="https://lunai.com/">
+    <link rel="canonical" href="https://lunai1-mu96-alphaproject.netlify.app">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
     <!-- JSON-LD Structured Data -->
@@ -38,7 +38,7 @@
       "@context": "https://schema.org",
       "@type": "Organization", 
       "name": "Lunai",
-      "url": "https://lunai.com",
+      "url": "https://lunai1-mu96-alphaproject.netlify.app",
       "logo": "https://lunai.com/logo.png",
       "description": "Cosmic digital excellence through AI voice synthesis and strategic branding",
       "sameAs": [
