Commit from Dualite Alpha:

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <meta name="language" content="English">
     <meta name="author" content="Lunai">
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="https://images.unsplash.com/photo-1720585711689-3d82f7c0a2a5?ixid=M3w1ODc0ODZ8MHwxfGFsbHx8fHx8fHx8fDE3MjA1OTI5MjR8&ixlib=rb-4.0.3&w=2560">
+    <link rel="apple-touch-icon" href="https://images.unsplash.com/photo-1720585711689-3d82f7c0a2a5?ixid=M3w1ODc0ODZ8MHwxfGFsbHx8fHx8fHx8fDE3MjA1OTI5MjR8&ixlib=rb-4.0.3&w=2560">
+
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://lunai1-mu96-alphaproject.netlify.app">
@@ -68,11 +72,11 @@
         <div class="voice-selection">
             <h4>Cosmic Voice</h4>
             <div class="voice-options">
-                <button class="voice-btn active" data-voice="nova">
+                <button class="voice-btn" data-voice="nova">
                     <span class="voice-name">Nova</span>
                     <span class="voice-desc">Ethereal</span>
                 </button>
-                <button class="voice-btn" data-voice="stellar">
+                <button class="voice-btn active" data-voice="stellar">
                     <span class="voice-name">Stellar</span>
                     <span class="voice-desc">Futuristic</span>
                 </button>
