Commit from Dualite Alpha:

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Primary Meta Tags -->
-    <title>Lunai - AI Voice, Branding, Digital Strategy & Creative Services</title>
-    <meta name="title" content="Lunai - AI Voice, Branding, Digital Strategy & Creative Services">
-    <meta name="description" content="Lunai offers cosmic digital excellence with 6 core services: Strategic Branding, Research & Intelligence, Strategy Development, Political Campaigns, Digital Web, and Content/Creative Excellence. Transform your vision with our AI-powered solutions.">
+    <title>Lunai - MULTI DIMENSIONAL IDEATORS</title>
+    <meta name="title" content="Lunai - MULTI DIMENSIONAL IDEATORS">
+    <meta name="description" content="Lunai, represents the pinnacle of strategic consulting excellence—a comprehensive ideation engine that transforms organizational vision into measurable reality.">
     <meta name="keywords" content="Strategic Branding, Brand Strategy, Research Intelligence, Market Research, Strategy Development, Business Model Innovation, Political Campaign Excellence, Digital Web Excellence, UX Strategy, Content and Creative Excellence, Professional Copywriting, AI Voice Synthesis, AI Business Analyst">
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
@@ -19,21 +19,21 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://lunai1-mu96-alphaproject.netlify.app">
-    <meta property="og:title" content="Lunai - AI Voice, Branding, Digital Strategy & Creative Services">
-    <meta property="og:description" content="Lunai offers cosmic digital excellence across Strategic Branding, Research, Web Development, and Creative Content services.">
+    <meta property="og:url" content="https://lunai.in">
+    <meta property="og:title" content="Lunai - MULTI DIMENSIONAL IDEATORS">
+    <meta property="og:description" content="Lunai, represents the pinnacle of strategic consulting excellence—a comprehensive ideation engine that transforms organizational vision into measurable reality.">
     <meta property="og:image" content="https://d33wubrfki0l68.cloudfront.net/68c7ff9a6f8677c3f75ab78c/screenshot_2025-09-15-12-00-20-0000.webp">
     <meta property="og:site_name" content="Lunai">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://lunai.com/">
-    <meta property="twitter:title" content="Lunai - AI Voice, Branding, Digital Strategy & Creative Services">
-    <meta property="twitter:description" content="Lunai offers cosmic digital excellence across Strategic Branding, Research, Web Development, and Creative Content services.">
-    <meta property="twitter:image" content="https://lunai.com/twitter-image.png">
+    <meta property="twitter:url" content="https://lunai.in">
+    <meta property="twitter:title" content="Lunai - MULTI DIMENSIONAL IDEATORS">
+    <meta property="twitter:description" content="Lunai, represents the pinnacle of strategic consulting excellence—a comprehensive ideation engine that transforms organizational vision into measurable reality.">
+    <meta property="twitter:image" content="https://d33wubrfki0l68.cloudfront.net/68c7ff9a6f8677c3f75ab78c/screenshot_2025-09-15-12-00-20-0000.webp">
 
     <!-- Additional SEO -->
-    <link rel="canonical" href="https://lunai1-mu96-alphaproject.netlify.app">
+    <link rel="canonical" href="https://lunai.in">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
     <!-- JSON-LD Structured Data -->
@@ -42,9 +42,9 @@
       "@context": "https://schema.org",
       "@type": "Organization", 
       "name": "Lunai",
-      "url": "https://lunai1-mu96-alphaproject.netlify.app",
-      "logo": "https://lunai.com/logo.png",
-      "description": "Cosmic digital excellence through AI voice synthesis and strategic branding",
+      "url": "https://lunai.in",
+      "logo": "https://images.unsplash.com/photo-1720585711689-3d82f7c0a2a5?ixid=M3w1ODc0ODZ8MHwxfGFsbHx8fHx8fHx8fDE3MjA1OTI5MjR8&ixlib=rb-4.0.3&w=2560",
+      "description": "Lunai, represents the pinnacle of strategic consulting excellence—a comprehensive ideation engine that transforms organizational vision into measurable reality.",
       "sameAs": [
         "https://www.linkedin.com/company/lunai",
         "https://twitter.com/lunai"
